--- a/7lalak/Base.lproj/Main_iPhone.storyboard
+++ b/7lalak/Base.lproj/Main_iPhone.storyboard
@@ -137,45 +137,15 @@
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                             <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="mZ7-77-JLK">
-                                <rect key="frame" x="39" y="236" width="242" height="103"/>
+                                <rect key="frame" x="39" y="254" width="242" height="89"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Ajs-RH-QAk">
-                                    <size key="itemSize" width="103" height="97"/>
+                                    <size key="itemSize" width="92" height="83"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="8" minY="1" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="1" minY="1" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="Ca9-sO-3V7">
-                                        <rect key="frame" x="8" y="4" width="103" height="97"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="103" height="97"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView userInteractionEnabled="NO" tag="100" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ckb-8x-vrH">
-                                                    <rect key="frame" x="6" y="6" width="90" height="65"/>
-                                                </imageView>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nPo-91-hMU">
-                                                    <rect key="frame" x="73" y="74" width="18" height="18"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <color key="backgroundColor" red="1" green="0.20000000000000001" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <state key="normal" title="X">
-                                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                    </state>
-                                                </button>
-                                            </subviews>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        </view>
-                                        <constraints>
-                                            <constraint firstItem="ckb-8x-vrH" firstAttribute="leading" secondItem="Ca9-sO-3V7" secondAttribute="leading" constant="5" id="9mr-mz-iCm"/>
-                                            <constraint firstAttribute="trailing" secondItem="ckb-8x-vrH" secondAttribute="trailing" constant="8" id="aYm-ZI-JSG"/>
-                                            <constraint firstItem="ckb-8x-vrH" firstAttribute="top" secondItem="Ca9-sO-3V7" secondAttribute="top" constant="11" id="bzu-jb-Lgp"/>
-                                            <constraint firstAttribute="bottom" secondItem="ckb-8x-vrH" secondAttribute="bottom" constant="14" id="wYJ-dh-XIX"/>
-                                        </constraints>
-                                    </collectionViewCell>
-                                </cells>
+                                <cells/>
                                 <connections>
                                     <outlet property="dataSource" destination="O0f-XM-K1F" id="Tee-O4-bkV"/>
                                     <outlet property="delegate" destination="O0f-XM-K1F" id="udZ-hV-ybF"/>
@@ -190,7 +160,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="getPhoto:" destination="O0f-XM-K1F" eventType="touchUpInside" id="c4i-rY-x6o"/>
+                                    <action selector="uploadButtonAction:" destination="O0f-XM-K1F" eventType="touchUpInside" id="BqG-Uj-AEL"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wDa-Hu-UHO">
@@ -222,6 +192,8 @@
                     <connections>
                         <outlet property="choosePhotoBtn" destination="wDa-Hu-UHO" id="scq-qn-Eli"/>
                         <outlet property="collectionView" destination="mZ7-77-JLK" id="Rgc-Ra-Hku"/>
+                        <outlet property="fAdsPrice" destination="Eqd-cV-kKR" id="BDQ-vZ-caL"/>
+                        <outlet property="fAdsText" destination="JVE-pM-vI9" id="lzw-qC-7k2"/>
                         <outlet property="pickerCategories" destination="r3A-b9-6PY" id="oRH-Yy-BfS"/>
                         <outlet property="takePhotoBtn" destination="JS9-dg-Oga" id="wvl-zO-C4l"/>
                     </connections>
