--- a/7lalak/UploadCell.xib
+++ b/7lalak/UploadCell.xib
@@ -7,17 +7,17 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="nM0-M9-8iG" customClass="UploadCell">
-            <rect key="frame" x="0.0" y="0.0" width="103" height="97"/>
+            <rect key="frame" x="0.0" y="0.0" width="90" height="80"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="103" height="97"/>
+                <rect key="frame" x="0.0" y="0.0" width="90" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" tag="100" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TkC-we-vzz">
-                        <rect key="frame" x="6" y="6" width="92" height="75"/>
+                        <rect key="frame" x="5" y="7" width="82" height="65"/>
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I7m-1X-vec">
-                        <rect key="frame" x="80" y="71" width="18" height="18"/>
+                        <rect key="frame" x="69" y="62" width="18" height="18"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" red="1" green="0.20000000000000001" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <state key="normal" title="X">
@@ -28,6 +28,7 @@
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
+            <size key="customSize" width="90" height="80"/>
             <connections>
                 <outlet property="deleteBtn" destination="I7m-1X-vec" id="vxr-a6-VCo"/>
                 <outlet property="imageView" destination="TkC-we-vzz" id="YWH-fu-B6T"/>
